--- a/setup/_etc_my.cnf
+++ b/setup/_etc_my.cnf
@@ -17,6 +17,9 @@ log_bin           = mysql-bin
 binlog_format     = row
 #binlog_row_image  = full
 expire_logs_days  = 10
+# BELOW COMMANDS ONLY FOR mySQL 5.6.5 ONWARDS...
+# gtid_mode                 = on
+# enforce_gtid_consistency  = on
 
 [mysqld_safe]
 log-error=/var/log/mysqld.log
