update satellite files

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,34 @@
-.vscode/
-dump/*.sql
-logs/*.log
-db/schema.rb
-config/*.yaml
+**/.vscode/**
+!**/.vscode/tasks.json
+!**/.vscode/launch.json
+!**/.vscode/settings.json
+!**/.vscode/extensions.json
 
+**/tmp/
+**/pkg/
+**/dump/*.sql
+**/logs/*.log
+**/db/schema.rb
+**/config/*.yaml
+**/node_modules
+**/public/packs
+**/public/packs-test
+
+.env
+*.cmd
+*.gem
+*.log
+*.out
 *.swo
 *.swp
-*.out 
-*.log 
 .keep
 *.lock
 *.yaml
+.bundle
+bundled
+coverage
 nohup.out
 .DS_Store
 .byebug_history
-Gemfile.lock
+
+
